fixed image display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ span {
 
 .imgCont img {
 	margin-top: 5px;
-
+	width: 100%;
 	/* max-width: 49.5%; */
 }
 
